<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anudeesh.hw04.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_label"
        android:id="@+id/textViewWelcome"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageTrivia"
        android:src="@drawable/trivia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/status_label"
        android:id="@+id/textViewStatus"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_exit"
            android:id="@+id/buttonExit"
            android:layout_marginRight="20dp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:id="@+id/buttonStart" />
    </LinearLayout>
</LinearLayout>
